<resources>
    <string name="app_name">Taras_Podolchak_FEM_P2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_Weather_One_Day">Weather One Day</string>
    <string name="menu_Weather_Five_Days">Weather Five Days</string>
    <string name="menu_Weather_Five_Days_Archived">Weather Five Days Archived</string>

    <!-- el tiempo -->
    <string name="weather">Clima</string>
    <string name="country_iso_code">Código ISO del País :</string>
    <string name="code">Código</string>
    <string name="city_name">Nombre de Ciudad :</string>
    <string name="name">Nombre</string>
    <string name="get">Obtener</string>
    <string name="tiempo">Tiempo</string>
    <string name="current">Actual :</string>
    <string name="se_siente_como">Se siente como :</string>
    <string name="minimum">Mínima :</string>
    <string name="maximum">Máxima :</string>
    <string name="presion">Presión :</string>
    <string name="humedadd">Humedad :</string>
    <string name="velocidad">Velocidad :</string>
    <string name="dirección">Dirección :</string>
    <string name="nubess">Nubes :</string>
    <string name="visibilidad">Visibilidad :</string>
    <string name="Fields_cannot_be_empty">Los campos no pueden ser vacíos</string>

    <string name="date">Fecha</string>
    <string name="temp">Temp</string>
    <string name="viento">Viento</string>
    <string name="nubes">Nubes</string>
    <string name="humedad">Humedad</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="recordarme">Recordarme</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="registrarse">Registrarse</string>
    <string name="volver">Volver</string>
    <string name="aceptar">Aceptar</string>
    <string name="aceptacion_de_condiciones">Aceptacion de condiciones</string>
    <string name="exit">Exit</string>
</resources>