<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.login.LoginFragment">

    <LinearLayout
        android:id="@+id/ll_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="220dp"
        android:background="@drawable/contenedor_blanco_radius4"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginBottom="30dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_contrasenna"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/ckb_recordarcontrasenna"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/recordarme" />

            <TextView
                android:id="@+id/txv_olvidaste_contrasenna"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/olvidaste_tu_contrase_a" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_iniciar_sesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/btn_formato_left"
            android:text="@string/iniciar_sesion" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_registrarse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="-180dp"
        android:background="@drawable/btn_formato_left"
        android:text="@string/registrarse" />
</LinearLayout>