<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_weather_One_Day">

    <fragment
        android:id="@+id/nav_weather_One_Day"
        android:name="com.example.taras_podolchak_fem_p2.ui.weatherOneDay.WeatherOneDayFragment"
        android:label="@string/menu_Weather_One_Day"
        tools:layout="@layout/fragment_weather_one_day" />

    <fragment
        android:id="@+id/nav_weather_Five_Days"
        android:name="com.example.taras_podolchak_fem_p2.ui.weatherFiveDays.WeatherFiveDaysFragment"
        android:label="@string/menu_Weather_Five_Days"
        tools:layout="@layout/fragment_weather_five_days" />

    <fragment
        android:id="@+id/nav_Weather_Five_Days_Archived"
        android:name="com.example.taras_podolchak_fem_p2.ui.weatherFiveDaysArchived.WeatherFiveDaysArchivedFragment"
        android:label="@string/menu_Weather_Five_Days_Archived"
        tools:layout="@layout/fragment_weather_five_days_archived" />
    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.taras_podolchak_fem_p2.ui.login.LoginFragment"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/nav_register"
        android:name="com.example.taras_podolchak_fem_p2.ui.login.RegisterFragment"
        tools:layout="@layout/fragment_register" />
</navigation>